--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div id="title">PROFESSIONS</div>
                 <div id="title2">2009 - 2022</div>
                     <div id="detail">Technical Team Lead</div>
-                    <div id="detail">Agile Metodology Leader</div>
-                    <div id="detail">Programmig and Algorithm Design</div>
+                    <div id="detail">Agile Methodology Leader</div>
+                    <div id="detail">Programming and Algorithm Design</div>
                 <div id="title">EDUCATION</div>
                     <div id="detail">Bachelor of Software Computer</div>
             </div>
@@ -117,7 +117,7 @@
                         <div><div style="width:100%"></div></div>
                     </div>
                     <div id="status_bar">
-                        <h4>Reserch & Development</h4>
+                        <h4>Research & Development</h4>
                         <div><div style="width:70%"></div></div>
                     </div>
                     <div id="status_bar">
@@ -125,8 +125,8 @@
                         <div><div style="width:60%"></div></div>
                     </div>
                 </div>
-                <div id="title2">Helli Institude - 2021    <a target="_blank" id="web_page" href="https://www.mhelli.com/about-us/">(mhelli.com - Mr. Ansari)</a></div>
-                <p id="detail">Helli Institude is an ELearning software solution company. I had a task to make a team for continuing to develop the source of the online exam builder project, and doing recruitment process for selecting programmers. also, we started an other startup for running descriptive exams online.</p>
+                <div id="title2">Helli Institute - 2021    <a target="_blank" id="web_page" href="https://www.mhelli.com/about-us/">(mhelli.com - Mr. Ansari)</a></div>
+                <p id="detail">Helli Institute is an ELearning software solution company. I had a task to make a team for continuing to develop the source of the online exam builder project, and doing recruitment process for selecting programmers. also, we started an other startup for running descriptive exams online.</p>
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>Product Owner</h4>
@@ -197,9 +197,9 @@
 
 
         <div id="title">Technical Advisor for Startups</div>
-        <p id="detail">As an experiented technical person, who had hand over both programing and mentoring for software systems, I was involved in many startups as a Technical Advisor, Agile project manager and so on. some of them are mentioned here:</p>
+        <p id="detail">As an experienced technical person, who had hand over both programing and mentoring for software systems, I was involved in many startups as a Technical Advisor, Agile project manager and so on. some of them are mentioned here:</p>
         <div id="title2">Forjumps - 2022    <span id="web_page">(Mrs. Gharib, Mr. Kazemi)</span></div>
-            <div id="detail">Forjump was some kind of video sharing comunity startup. I had to make a sutable and practical solution for hosting and promoting startup's web site on AWS services.</div>
+            <div id="detail">Forjump was some kind of video sharing community startup. I had to make a suitable and practical solution for hosting and promoting startup's web site on AWS services.</div>
             <div id="status_box">
                 <a target="_blank" id="web_page" href="https://forjump.com/">forjump.com</a>
             </div>
@@ -266,7 +266,7 @@
             </div>
 
             <div id="title2">AzTa Bazar - 2017 <span id="web_page">(Mr. Mohammad Zadeh, Mr. Shafeei)</span></div>
-            <p id="detail">AzTa Bazar was an online shopping service, foucused on grocery products. the start up was created from a server side panel for admins, an Android application for grocery stores admins and an Android application for customers.</p>
+            <p id="detail">AzTa Bazar was an online shopping service, focused on grocery products. the start up was created from a server side panel for admins, an Android application for grocery stores admins and an Android application for customers.</p>
             <div id="status_box">
                 <a id="web_page" target="_blank">No link available</a>
             </div>
@@ -294,7 +294,7 @@
             <div id="title">Awards and Certificates</div>
                 
                 <div id="title2">Patent certificate</div>
-                <p id="detail">I was a member of the team of inventors of a kind of portable computer. I have been in charge of designing and programing software and middlewares.</p>
+                <p id="detail">I was a member of the team of inventors of a kind of portable computer. I have been in charge of designing and programing software and middleware.</p>
                 <div id="status_box">
                     <div id="image_3">
                         <a target="_blank" href="./img/Patent.jpeg"><img src="./img/Patent.jpeg" alt="Patent certificate"/></a>
@@ -382,7 +382,6 @@
                 <p id="detail">Serve as a point of contact for all customers to address any issues as they arise.</p>
             <div id="title2">Key Achievements</div>
                 <p id="detail">Introduced more than 100 Javascript, React and ActionScript Components to improve company's product’s quality and maintenance.</p>
-                <p id="detail">Designed databases for C2C and B2C projects to help streamline timeframes and expedite processes.</p>
                 <p id="detail">Developed UDP server from scratch to resolve security errors involving third-party socket servers.</p>
                 
             <div id="status_box">
@@ -487,7 +486,7 @@
                         <div><div style="width:90%"></div></div>
                     </div>
                     <div id="status_bar">
-                        <h4>Hicking</h4>
+                        <h4>Hiking</h4>
                         <div><div style="width:100%"></div></div>
                     </div>
                     <div id="status_bar">
