Remote project managments

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div id="title">CTO - Director of Development - Technical Architect - R&D</div>
             <!-- <div id="title2">Major Customers</div> -->
                 <div id="title2">ByUs Co. - 2022    <a target="_blank" id="web_page" href="https://byus.co/">(byus.co - Mr. Kazemi)</a></div>
-                <p id="detail">As a CTO, I was in charge to make technical decisions and assign tasks in a Kanban method to 4 programmers and technical members.</p>
+                <p id="detail">As a CTO, I was in charge to make technical decisions and assign tasks in a Kanban method to 4 programmers and technical members. because of the company situation, I had to manage the technical team remotely.</p>
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>AWS</h4>
@@ -219,6 +219,10 @@
                 <div id="status_bar">
                     <h4>Github Actions</h4>
                     <div><div style="width:80%"></div></div>
+                </div>
+                <div id="status_bar">
+                    <h4>Remote Team Management</h4>
+                    <div><div style="width:100%"></div></div>
                 </div>
             </div>
         <div id="title2">Sarrafi Digital - 2021    <span id="web_page">(Mr. Mazrooi, Mr. Mojtabai)</span></div>
