--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
                     <h4>Technical Consultant</h4>
                     <div><div style="width:80%"></div></div>
                 </div>
+                <div id="status_bar">
+                    <h4>OWASP</h4>
+                    <div><div style="width:100%"></div></div>
+                </div>
             </div>
 
 
