Header tag ignored on google search engines

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 </head>
 <body style="opacity:0">
-    <header>
+    <div>
         <div id="image">
             <img src="./img/mesepehr.jpg" alt="MESepehr Photo">
         </div>
@@ -44,7 +44,7 @@
                     <div id="detail">Bachelor of Software Computer</div>
             </div>
         </div>
-    </header>
+    </div>
     <h1>MOHAMMAD E. SEPEHR, Principal Solution Architect</h1>
     <div id="body">
         <div id="left_side">
