--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style/style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
@@ -31,7 +32,7 @@
 <body style="opacity:0">
     <div>
         <div id="image">
-            <img src="./img/mesepehr.jpg" alt="MESepehr Photo">
+            <img src="./img/mesepehr.jpg" alt="ebrahimsepehr.ir>
         </div>
         <div id="info">
             <div>
