--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOHAMMAD E. SEPEHR, Principal Solution Architect</title>
+    <meta name="description" content="Mohammad E. Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates.">
+    <meta name="robots" content="noodp,noydir" />
     <meta name="author" content="Mohammad E. Sepehr">
     <link rel="stylesheet" href="./style/style.css">
 
@@ -18,7 +20,6 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="description" content="Principal Solution Architect, Creative and driven professional with over 13-year track record of innovation and success">
     <meta name="keywords" content="محمد ابراهیم سپهر, سپهر, mesepehr, Mohammad E. Sepehr, Solution Architect, Programmer, Technical Lead, Agile Coach">
 
     <link rel="preload" href="./fonts/calibri.eot" as="font" type="font/woff" crossOrigin="anonymous">
