--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOHAMMAD E. SEPEHR, Principal Solution Architect</title>
+    <title>MOHAMMAD E. SEPEHR, Principal Software Solution Architect</title>
     <meta name="description" content="Mohammad E. Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates.">
     <meta name="robots" content="noodp,noydir" />
     <meta name="author" content="Mohammad E. Sepehr">
