--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body style="opacity:0">
     <div>
         <div id="image">
-            <img src="./img/mesepehr.jpg" alt="ebrahimsepehr.ir>
+            <img src="./img/mesepehr.jpg" alt="ebrahimsepehr.ir">
         </div>
         <div id="info">
             <div>
