--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </head>
 <body style="opacity:0">
-    <div>
+    <header>
         <div id="image">
             <img src="./img/mesepehr.jpg" alt="ebrahimsepehr.ir">
         </div>
@@ -46,7 +46,7 @@
                     <div id="detail">Bachelor of Software Computer</div>
             </div>
         </div>
-    </div>
+    </header>
     <h1>MOHAMMAD E. SEPEHR, Principal Solution Architect</h1>
     <div id="body">
         <div id="left_side">
