--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
                 <p id="detail">I was a member of the team of inventors of a kind of portable computer. I have been in charge of designing and programing software and middleware.</p>
                 <div id="status_box">
                     <div id="image_3">
-                        <a target="_blank" href="./img/Patent.jpeg"><img src="./img/Patent.jpeg" alt="Patent certificate"/></a>
+                        <a target="_blank" href="./img/Patent.jpeg"><img src="./img/Patent-icon.jpg" alt="Patent certificate"/></a>
                         <a target="_blank" href="https://ipm.ssaa.ir/_Search/Invention.aspx#page-1">ipm.ssaa.ir RN=66427</a>
                     </div>
                     <div id="image_3">
-                        <a target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers"><img src="./img/SaffronCode.png" alt="SaffronCode SDK logo"/>
+                        <a target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers"><img src="./img/SaffronCode-icon.png" alt="SaffronCode SDK logo"/>
                         SaffronCode SDK
                         </a>
                     </div>
@@ -343,9 +343,9 @@
                 <div id="title2">Art University of Isfahan - 2012 to 2015  <a id="web_page" target="_blank" href="https://en.aui.ac.ir/">(aui.ac.ir)</a></div>
                 <p id="detail">I had 3 workshops to introduce graphic designer students to the concepts of web programming.</p>
                 <div id="status_box">
-                    <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2015.jpg"><img src="./img/ArtUniversityofIsfahan-2015.jpg" alt="Art University of Isfahan - 2015"/></a>
-                    <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2013.jpg"><img src="./img/ArtUniversityofIsfahan-2013.jpg" alt="Art University of Isfahan - 2013"/></a>
-                    <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2012.jpg"><img src="./img/ArtUniversityofIsfahan-2012.jpg" alt="Art University of Isfahan - 2012"/></a>
+                    <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2015.jpg"><img src="./img/ArtUniversityofIsfahan-2015-icon.jpg" alt="Art University of Isfahan - 2015"/></a>
+                    <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2013.jpg"><img src="./img/ArtUniversityofIsfahan-2013-icon.jpg" alt="Art University of Isfahan - 2013"/></a>
+                    <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2012.jpg"><img src="./img/ArtUniversityofIsfahan-2012-icon.jpg" alt="Art University of Isfahan - 2012"/></a>
                 </div>
                 <div id="status_box">
                     <div id="status_bar">
