--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link rel="preload" href="./fonts/calibri.svg#calibri" as="font" type="font/woff" crossOrigin="anonymous">
     <link rel="preload" href="./img/mesepehr.jpg" as="image" type="image/jpeg" crossOrigin="use-credentials">
 
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=629ce57dea475c0019c8eb3c&product=inline-follow-buttons" async="async"></script>
+
 </head>
 <body style="opacity:0">
     <header>
@@ -58,12 +60,14 @@
                     <div id="detail"><a target="_blank" href="mailto:ebrahimsepehr@gmail.com">ebrahimsepehr@gmail.com</a></div>
                     <div id="detail"><a target="_blank" href="tel:+989127785180">+98 912 778 51 80</a></div>
                     <div id="detail"><a target="_blank" href="https://ebrahimsepehr.ir">ebrahimsepehr.ir</a></div>
-                    <div id="detail"><a target="_blank" href="https://linkedin.com/in/mohamad-e-sepehr">linkedin.com/in/mohamad-e-sepehr</a></div>
-                    <div id="detail"><a target="_blank" href="https://github.com/MESepehr">github.com/MESepehr</a></div>
                 
                 <div id="title">PERSONAL DETAILS</div>
                     <div id="detail">April 15, 1989  ∙ Tehran</div>
                     <div id="detail">Male ∙ Married</div>
+
+                <div id="extra_space"></div>
+
+                <div class="sharethis-inline-follow-buttons"></div>
             </div>
         </div>
         <div id="right_side">
