Styles moved to css file

--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>AWS</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>GitHub Actions</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>PHP</h4>
-                        <div><div style="width:30%"></div></div>
+                        <div><div class="p30"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>JavaScript</h4>
-                        <div><div style="width:20%"></div></div>
+                        <div><div class="p20"></div></div>
                     </div>
                 </div>
                 <div id="title2">Paliz Co - 2021    <a target="_blank" id="web_page" href="https://palizct.com/">(palizct.com - Mr. Jahangard)</a></div>
@@ -121,19 +121,19 @@
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>Solution Architect</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Azure DevOps</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Research & Development</h4>
-                        <div><div style="width:70%"></div></div>
+                        <div><div class="p70"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>PIXIJS</h4>
-                        <div><div style="width:60%"></div></div>
+                        <div><div class="p60"></div></div>
                     </div>
                 </div>
                 <div id="title2">Helli Institute - 2021    <a target="_blank" id="web_page" href="https://www.mhelli.com/about-us/">(mhelli.com - Mr. Ansari)</a></div>
@@ -141,19 +141,19 @@
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>Product Owner</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Scrum Master</h4>
-                        <div><div style="width:80%"></div></div>
+                        <div><div class="p80"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>ReactJS</h4>
-                        <div><div style="width:40%"></div></div>
+                        <div><div class="p40"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Python</h4>
-                        <div><div style="width:20%"></div></div>
+                        <div><div class="p20"></div></div>
                     </div>
                 </div>
                 <div id="title2">Sadr Clinic - 2020    <a target="_blank" id="web_page" href="https://onlinesadr.ir/Home/AboutUs">(onlinesadr.com - Dr. Saidi)</a></div>
@@ -161,19 +161,19 @@
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>Solution Architect</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Technical Lead</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Product Owner</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>C#</h4>
-                        <div><div style="width:10%"></div></div>
+                        <div><div class="p10"></div></div>
                     </div>
                 </div>
 
@@ -190,23 +190,23 @@
             <div id="status_box">
                 <div id="status_bar">
                     <h4>Software Programmer</h4>
-                    <div><div style="width:100%"></div></div>
+                    <div><div class="p100"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Technical Architect</h4>
-                    <div><div style="width:100%"></div></div>
+                    <div><div class="p100"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>JavaScript</h4>
-                    <div><div style="width:95%"></div></div>
+                    <div><div class="p95"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Technical Consultant</h4>
-                    <div><div style="width:80%"></div></div>
+                    <div><div class="p80"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>OWASP</h4>
-                    <div><div style="width:100%"></div></div>
+                    <div><div class="p100"></div></div>
                 </div>
             </div>
 
@@ -221,23 +221,23 @@
             <div id="status_box">
                 <div id="status_bar">
                     <h4>PHP</h4>
-                    <div><div style="width:100%"></div></div>
+                    <div><div class="p100"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>MySQL</h4>
-                    <div><div style="width:95%"></div></div>
+                    <div><div class="p95"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>AWS</h4>
-                    <div><div style="width:80%"></div></div>
+                    <div><div class="p80"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Github Actions</h4>
-                    <div><div style="width:80%"></div></div>
+                    <div><div class="p80"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Remote Team Management</h4>
-                    <div><div style="width:100%"></div></div>
+                    <div><div class="p100"></div></div>
                 </div>
             </div>
         <div id="title2">Sarrafi Digital - 2021    <span id="web_page">(Mr. Mazrooi, Mr. Mojtabai)</span></div>
@@ -248,39 +248,39 @@
             <div id="status_box">
                 <div id="status_bar">
                     <h4>Agile Coach</h4>
-                    <div><div style="width:100%"></div></div>
+                    <div><div class="p100"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>BlockChains</h4>
-                    <div><div style="width:100%"></div></div>
+                    <div><div class="p100"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Bitcoin</h4>
-                    <div><div style="width:80%"></div></div>
+                    <div><div class="p80"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Crypto Currencies</h4>
-                    <div><div style="width:80%"></div></div>
+                    <div><div class="p80"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>UI/UX</h4>
-                    <div><div style="width:30%"></div></div>
+                    <div><div class="p30"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>.net Core</h4>
-                    <div><div style="width:80%"></div></div>
+                    <div><div class="p80"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Bootstrap</h4>
-                    <div><div style="width:80%"></div></div>
+                    <div><div class="p80"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>MSSQL</h4>
-                    <div><div style="width:40%"></div></div>
+                    <div><div class="p40"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Socket.io</h4>
-                    <div><div style="width:30%"></div></div>
+                    <div><div class="p30"></div></div>
                 </div>
             </div>
 
@@ -292,19 +292,19 @@
             <div id="status_box">
                 <div id="status_bar">
                     <h4>UML</h4>
-                    <div><div style="width:100%"></div></div>
+                    <div><div class="p100"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>C#</h4>
-                    <div><div style="width:50%"></div></div>
+                    <div><div class="p50"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>MSSQL</h4>
-                    <div><div style="width:40%"></div></div>
+                    <div><div class="p40"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Android</h4>
-                    <div><div style="width:60%"></div></div>
+                    <div><div class="p60"></div></div>
                 </div>
             </div>
 
@@ -328,19 +328,19 @@
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>UI Programmer</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Middle Ware Programmer</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>SDK Programming</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Component Development</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar"></div>
                     <div id="status_bar"></div>
@@ -356,19 +356,19 @@
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>Web Design</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>HTML5</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>CSS3</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Graphic</h4>
-                        <div><div style="width:10%"></div></div>
+                        <div><div class="p10"></div></div>
                     </div>
                 </div>
                 
@@ -406,31 +406,31 @@
             <div id="status_box">
                 <div id="status_bar">
                     <h4>Mobile Programmer</h4>
-                    <div><div style="width:100%"></div></div>
+                    <div><div class="p100"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>ReactJS</h4>
-                    <div><div style="width:90%"></div></div>
+                    <div><div class="p90"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>UML</h4>
-                    <div><div style="width:80%"></div></div>
+                    <div><div class="p80"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>SQL</h4>
-                    <div><div style="width:80%"></div></div>
+                    <div><div class="p80"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Front-end</h4>
-                    <div><div style="width:70%"></div></div>
+                    <div><div class="p70"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>Database</h4>
-                    <div><div style="width:60%"></div></div>
+                    <div><div class="p60"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>C#</h4>
-                    <div><div style="width:25%"></div></div>
+                    <div><div class="p25"></div></div>
                 </div>
             </div>
                 
@@ -442,19 +442,19 @@
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>ActionScript</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>HTML</h4>
-                        <div><div style="width:90%"></div></div>
+                        <div><div class="p90"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>CSS</h4>
-                        <div><div style="width:90%"></div></div>
+                        <div><div class="p90"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>JavaScript</h4>
-                        <div><div style="width:25%"></div></div>
+                        <div><div class="p25"></div></div>
                     </div>
                 </div>
             <div id="extra_space"></div>
@@ -463,54 +463,54 @@
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>Honesty</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Problem-solving</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Helpfulness</h4>
-                        <div><div style="width:99%"></div></div>
+                        <div><div class="p99"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Sincerity</h4>
-                        <div><div style="width:90%"></div></div>
+                        <div><div class="p90"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Creative thinking</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Leadership skills</h4>
-                        <div><div style="width:99%"></div></div>
+                        <div><div class="p99"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Interpersonal skills</h4>
-                        <div><div style="width:70%"></div></div>
+                        <div><div class="p70"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Adaptability</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                 </div>
                 <p id="detail">Hobbies</p>
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>Nature</h4>
-                        <div><div style="width:90%"></div></div>
+                        <div><div class="p90"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Swimming</h4>
-                        <div><div style="width:90%"></div></div>
+                        <div><div class="p90"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Hiking</h4>
-                        <div><div style="width:100%"></div></div>
+                        <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
                         <h4>Historical places</h4>
-                        <div><div style="width:70%"></div></div>
+                        <div><div class="p70"></div></div>
                     </div>
                 </div>
                 <div id="extra_space"></div>
