--- a/index.html
+++ b/index.html
@@ -310,13 +310,14 @@
                 <div id="status_box">
                     <div id="image_3">
                         <a target="_blank" href="https://ebrahimsepehr.ir/img/Patent.jpeg"><img src="./img/Patent-icon.jpg" alt="Patent certificate"/></a>
-                        <a target="_blank" href="https://ipm.ssaa.ir/_Search/Invention.aspx#page-1">ipm.ssaa.ir RN=66427</a>
                     </div>
                     <div id="image_3">
-                        <a target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers"><img src="./img/SaffronCode-icon.png" alt="SaffronCode SDK logo"/>
-                        SaffronCode SDK
-                        </a>
+                        <a target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers"><img src="./img/SaffronCode-icon.png" alt="SaffronCode SDK logo"/></a>
                     </div>
+                </div>
+                <div id="status_box">
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/Patent.jpeg">Patent ipm.ssaa.ir RN=66427</a>
+                    <a id="web_page" target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers">SaffronCode SDK</a>
                 </div>
                 <div id="status_box">
                     <div id="status_bar">
