Other links updated

--- a/index.html
+++ b/index.html
@@ -348,6 +348,11 @@
                     <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.jpg"><img src="./img/ArtUniversityofIsfahan-2012-icon.jpg" alt="Art University of Isfahan - 2012"/></a>
                 </div>
                 <div id="status_box">
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.jpg">Art University of Isfahan - 2015</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.jpg">Art University of Isfahan - 2013</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.jpg">Art University of Isfahan - 2012</a>
+                </div>
+                <div id="status_box">
                     <div id="status_bar">
                         <h4>Web Design</h4>
                         <div><div class="p100"></div></div>
@@ -370,15 +375,15 @@
                 <p id="detail">I have had interviews and lectures about "Saffron Code SDK".</p>
                 <div id="status_box">
                     <div id="image_2">
-                        <a target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/"><img src="./img/Interview_farhikhtegan.jpg" alt="Interview with Farhikhtegan mag."/>
-                            farhikhtegandaily.com Text
-                        </a>
+                        <a target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/"><img src="./img/Interview_farhikhtegan.jpg" alt="Interview with Farhikhtegan mag."/></a>
                     </div>
                     <div id="image_2">
-                        <a target="_blank" id="image_2" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92"><img src="./img/Interview_karshenasan.jpg" alt="Interview with Karshenasan.net"/>
-                            dotnetexpert.ir Video (Farsi)
-                        </a>
+                        <a target="_blank" id="image_2" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92"><img src="./img/Interview_karshenasan.jpg" alt="Interview with Karshenasan.net"/></a>
                     </div>
+                </div>
+                <div id="status_box">
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.jpg">farhikhtegandaily.com Text</a>
+                    <a id="web_page" target="_blank" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92">dotnetexpert.ir Video (Farsi)</a>
                 </div>
 
                 <div id="extra_space"></div>
