--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="keywords" content="محمد ابراهیم سپهر, سپهر, mesepehr, Mohammad E. Sepehr, Solution Architect, Programmer, Technical Lead, Agile Coach">
-
-    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=629ce57dea475c0019c8eb3c&product=inline-follow-buttons" async="async"></script>
-
 </head>
 <body style="opacity:0">
     <header>
@@ -43,7 +40,7 @@
                     <div id="detail">Bachelor of Software Computer</div>
             </div>
             
-            <img id="my_sign" src="./img/sign/Muhammad_Rasool_Allah.png" alt="Muhammad Rasool Allah"/>
+            <img id="my_sign" src="./img/social/Muhammad_Rasool_Allah.png" alt="Muhammad Rasool Allah"/>
         </div>
     </header>
     <h1>MOHAMMAD E. SEPEHR, Principal Solution Architect</h1>
@@ -62,7 +59,15 @@
 
                 <div id="extra_space"></div>
 
-                <div class="sharethis-inline-follow-buttons"></div>
+                <div id="status_box">
+                    <div>
+                        <img src="./img/social/linkedin.svg" alt="Sepehr LinkedIn"/>
+                        <a id="web_page" target="_blank" href="https://www.linkedin.com/in/mohamad-e-sepehr/">LinkedIn</a>
+                    </div>
+                    <a id="web_page" target="_blank" href="https://twitter.com/EbrahimSepehr">Twitter</a>
+                    <a id="web_page" target="_blank" href="https://github.com/MESepehr">GitHub</a>
+                    <a id="web_page" target="_blank" href="https://stackoverflow.com/users/2286503/mesepehr">StackOverFlow</a>
+                </div>
             </div>
         </div>
         <div id="right_side">
