--- a/index.html
+++ b/index.html
@@ -59,14 +59,23 @@
 
                 <div id="extra_space"></div>
 
-                <div id="status_box">
+                <div >
                     <div>
-                        <img src="./img/social/linkedin.svg" alt="Sepehr LinkedIn"/>
-                        <a id="web_page" target="_blank" href="https://www.linkedin.com/in/mohamad-e-sepehr/">LinkedIn</a>
+                        <img id="social_icon" src="./img/social/github.svg" alt="GitHub"/>
+                        <a id="web_page" target="_blank" href="https://github.com/MESepehr">mesepehr</a>
                     </div>
-                    <a id="web_page" target="_blank" href="https://twitter.com/EbrahimSepehr">Twitter</a>
-                    <a id="web_page" target="_blank" href="https://github.com/MESepehr">GitHub</a>
-                    <a id="web_page" target="_blank" href="https://stackoverflow.com/users/2286503/mesepehr">StackOverFlow</a>
+                    <div>
+                        <img id="social_icon" src="./img/social/stackoverflow.svg" alt="Stackoverflow"/>
+                        <a id="web_page" target="_blank" href="https://stackoverflow.com/users/2286503/mesepehr">mesepehr</a>
+                    </div>
+                    <div>
+                        <img id="social_icon" src="./img/social/twitter.svg" alt="Twitter"/>
+                        <a id="web_page" target="_blank" href="https://twitter.com/EbrahimSepehr">EbrahimSepehr</a>
+                    </div>
+                    <div>
+                        <img id="social_icon" src="./img/social/linkedin.svg" alt="LinkedIn"/>
+                        <a id="web_page" target="_blank" href="https://www.linkedin.com/in/mohamad-e-sepehr/">mohamad-e-sepehr</a>
+                    </div>
                 </div>
             </div>
         </div>
